Badge info page fix: issuer image visible

--- a/src/scss/badge.scss
+++ b/src/scss/badge.scss
@@ -225,17 +225,22 @@ button {
 }
 
 .issuer-data {
+
     margin-bottom: 3px;
-    .issuer-links, .issuer-image {
+    .issuer-links{
         margin-left: 5px;
     }
-    .issuer-image {
-        img {
-            max-width: 50px;
-            max-height: 50px;
-            padding: 3px;
-            border: 1px solid #dddddd;
-            border-radius: 4px;
-        }
-    }
 }
+
+.issuer-image {
+            img {
+                width: 50px;
+                height: 50px;
+                padding: 3px;
+                border: 1px solid #dddddd;
+                border-radius: 4px;
+                margin-left: 15px;
+
+            }
+        }
+
